--- a/web.config
+++ b/web.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <connectionStrings>
-        <add connectionString="server=localhost;database=obkbennekom;uid=root;pwd=Kierkamp36" name="obkbennekom" providerName="MySql.Data.MySqlClient" />
+        <add connectionString="server=localhost;uid=obkdbuser;pwd=K13rk@mp36;database=obkbennekom" name="obkbennekom" providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
 </configuration>
