--- a/web.config
+++ b/web.config
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
     <connectionStrings>
-        <add connectionString="server=localhost;uid=obkbennekoU4hxg;pwd=L+tv:mS#[x.T;Database=obkbennekom" name="obkbennekom" providerName="MySql.Data.MySqlClient" />
-        <add connectionString="server=sql11.000webhost.com;database=a9776493_obk;uid=a9776493_obk;pwd=K13rk@mp36" name="a9776493_obk" providerName="MySql.Data.MySqlClient" />
+        <add connectionString="server=localhost;uid=root;pwd=K13rk@mp36;database=obkbennekom" name="obkbennekom" providerName="MySql.Data.MySqlClient" />
     </connectionStrings>
 </configuration>
